Removes plawer window for vita, fixes icon overflow in small screens

--- a/src/less/vita.less
+++ b/src/less/vita.less
@@ -1,4 +1,4 @@
-/* 
+/*
   Vita specific stylesheet
 */
 @media screen and (max-device-width: 960px) {
@@ -6,5 +6,9 @@
     width:0;
     padding: 0;
     width:0;
+  }
+
+  .video-player {
+    display: none;
   }
 }
